--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,32 +1,11 @@
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: homelab-gateway-operator
+    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups:
-  - demo.hmdyt.github.io
-  resources:
-  - samples
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - demo.hmdyt.github.io
-  resources:
-  - samples/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - demo.hmdyt.github.io
-  resources:
-  - samples/status
-  verbs:
-  - get
-  - patch
-  - update
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
